--- a/Zhy.Components.Wpf/Zhy.Components.Wpf.csproj
+++ b/Zhy.Components.Wpf/Zhy.Components.Wpf.csproj
@@ -21,9 +21,8 @@
 	<PackageIcon>Resources\Images\logo_light%40180.png</PackageIcon>
 	<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 	<PackageLicenseFile>License.txt</PackageLicenseFile>
-	<Version>1.0.0.3</Version>
-	<PackageReleaseNotes>1. 修改命名空间；
-2. 开放配置ZDataGrid按钮样式属性；</PackageReleaseNotes>
+	<Version>1.1.0.2</Version>
+	<PackageReleaseNotes>1. 添加树结构类型，支持遍历、查询、反序列化等；</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,6 +30,8 @@
     <Compile Remove="Attributes\ZFormDataGridAttribute.cs" />
     <Compile Remove="Attributes\ZOperateButtonAttribute.cs" />
     <Compile Remove="Attributes\Bases\ZFormColumnAttribute.cs" />
+    <Compile Remove="Components\Tree\TestTree.cs" />
+    <Compile Remove="Components\Tree\Tree.cs" />
     <Compile Remove="Views\Controls\MultiComboBox.cs" />
     <Compile Remove="Views\Controls\ZDataGrid - 复制.cs" />
     <Compile Remove="Views\Controls\ZDataGrid - 复制.xaml.cs" />
@@ -66,10 +67,6 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
   </ItemGroup>
 
   <ItemGroup>
